make it responsive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                         </a>
                         <!-- End logo -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
+                                <span class="navbar-toggler-icon">
+                                    <i class="fas fa-bars "></i>
+                                </span>
                         </button>
                         <div class="collapse navbar-collapse" id="main-nav">
                             <ul class="navbar-nav ml-auto">
@@ -64,10 +66,10 @@
     <div class="about" id="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 about-pic">
+                <div class="col-sm-4 about-pic">
                     <img src="imgs/avatar.jpg" alt="my picture">
                 </div>
-                <div class="col-md-8 about-me">
+                <div class="col-sm-8 about-me">
                     <h5>I'm Amr, i'm 24 years old </h5>
                     <h6>I'm a Front end developer</h6>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, similique officiis minima illum quis consequuntur neque doloremque, sint ea eligendi assumenda perferendis? Maxime, ipsum molestias hic doloremque excepturi dolor! Nulla.</p>
@@ -83,7 +85,7 @@
         <h1>Skills</h1>
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="skill">
                         <h5>HTML</h5>
                         <div class="progress" >
@@ -91,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="skill">
                         <h5>Css</h5>
                         <div class="progress" >
@@ -101,7 +103,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="skill">
                         <h5>JS / JQuery</h5>
                         <div class="progress" >
@@ -109,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-sm-6">
                     <div class="skill">
                         <h5>Sass</h5>
                         <div class="progress" >
@@ -119,7 +121,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="skill">
                         <h5>BootStrap 4</h5>
                         <div class="progress" >
@@ -127,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="skill">
                         <h5>Git</h5>
                         <div class="progress" >
@@ -137,7 +139,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="skill">
                         <h5>PhP</h5>
                         <div class="progress" >
@@ -145,7 +147,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <div class="skill">
                         <h5>Photoshop</h5>
                         <div class="progress" >
@@ -161,40 +163,37 @@
         <div class="portfolio" id="portfolio">
             <h1>Portfolio</h1>
             <div class="row">
-                <div class="col-6 item">
+                <div class="col-md-6 item item-one">
                     <div class="row">
                         <div class="col-6 pic">
                             <img src="imgs/sites/site01.jpg" alt="Site One"/>
                         </div>
                         <div class="col-6 item-body">
                             <h4>website Title</h4>
-                            <h6 class="sub-title">Subtitle</h6>
-                            <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe obcaecati explicabo reiciendis sed vitae velit odio repellendus! Aspernatur.</p>
+                            <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe obcaecati explicabo reiciendis sed vitae.</p>
                             <button class="btn">View Website</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 item">
+                <div class="col-md-6 item item-two">
                     <div class="row">
                         <div class="col-6 pic">
                             <img src="imgs/sites/site02.jpg" alt="Site Two"/>
                         </div>
                         <div class="col-6 item-body">
                             <h4>website Title</h4>
-                            <h6 class="sub-title">Subtitle</h6>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe obcaecati explicabo reiciendis sed vitae velit odio repellendus! Aspernatur.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe obcaecati explicabo reiciendis sed vitae.</p>
                             <button class="btn">View Website</button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-6 item">
+                <div class="col-md-6 item item-three">
                     <div class="row">
                         <div class="col-6 item-body text-right">
                             <h4>website Title</h4>
-                            <h6 class="sub-title">Subtitle</h6>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe obcaecati explicabo reiciendis sed vitae velit odio repellendus! Aspernatur.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe obcaecati explicabo reiciendis sed vitae.</p>
                             <button class="btn">View Website</button>
                         </div>
                         <div class="col-6 pic">
@@ -202,12 +201,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 item">
+                <div class="col-md-6 item item-four">
                     <div class="row">
                         <div class="col-6 item-body text-right">
                             <h4>website Title</h4>
-                            <h6 class="sub-title">Subtitle</h6>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe obcaecati explicabo reiciendis sed vitae velit odio repellendus! Aspernatur.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe obcaecati explicabo reiciendis sed vitae.</p>
                             <button class="btn">View Website</button>
                         </div>
                         <div class="col-6 pic">
@@ -223,7 +221,7 @@
         <h1>Services</h1>
         <div class="container">
             <div class="row">
-                <div class="col-4 service">
+                <div class="col-sm-4 service">
                     <div class="circle">
                         <span>
                             <i class="fas fa-edit"></i>
@@ -231,7 +229,7 @@
                     </div>
                     <p>Well Documented</p>
                 </div>
-                <div class="col-4 service ser-two">
+                <div class="col-sm-4 service ser-two">
                     <div class="circle">
                         <span>
                             <i class="fas fa-tablet-alt"></i>
@@ -239,7 +237,7 @@
                     </div>
                     <p>Responsive</p>
                 </div>
-                <div class="col-4 service">
+                <div class="col-sm-4 service">
                     <div class="circle">
                         <span>
                             <i class="fas fa-tv"></i>
